--- a/web/book_page.html
+++ b/web/book_page.html
@@ -103,6 +103,7 @@ and open the template in the editor.
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
+                            <button class="btn btn-default">Rate</button>
                         </p>
                     </div>
 
