--- a/web/advanced_search.html
+++ b/web/advanced_search.html
@@ -35,7 +35,7 @@
                             </select>
                         </div>
                         <div class="btn-send">
-                            <button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-send"></span> Search</button>
+                            <a href="display_page.html" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-send"></span> Search</a>
                         </div>
                     </div>
                 </div>
