--- a/web/searchbar.html
+++ b/web/searchbar.html
@@ -7,13 +7,13 @@ and open the template in the editor.
 <html>
     <div class="row" style="text-align: center">
         <div class="col-lg-12">
-            <form class="navbar-form page-header" role="search">
+            <form class="navbar-form page-header" role="search" action="display_page.html">
                 <div class="form-group" style="width: 50%">
                     <input type="text" class="form-control" placeholder="Search" style="width:100%">
                 </div>
                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> 
             </form>
-            <a href="#">Advanced Search </a>
+            <a href="advanced_search.html">Advanced Search </a>
         </div>
 
     </div>
