--- a/web/book_page.html
+++ b/web/book_page.html
@@ -19,8 +19,8 @@ and open the template in the editor.
                 <div class="col-lg-4">
                     <h2>Book Title</h2>
                     <p>By <a href="#">Author xxx</a></p>
-                    <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#borrow-modal">Borrow</button>
-                    <button type="button" class="btn btn-warning btn-lg btn-block">Add to Wish List</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='success.html';">Borrow</button>
+                    <button type="button" class="btn btn-warning btn-lg btn-block"  >Add to Wish List</button>
 
                     <h4>Description</h4>
                     <p>Microsoft PowerPivot is a free add-on to Excel from Microsoft that allows users to produce new kinds of reports and analyses that were simply impossible before, and this book is the first to tackle DAX formulas, the core capability of PowerPivot, from the perspective of the Excel audience. Written by the world's foremost PowerPivot blogger and practitioner, the book's concepts and approach are introduced in a simple, step-by-step manner tailored to the learning style of Excel users everywhere. The techniques presented allow users to produce, in hours or even minutes,  </p>
