--- a/web/nav.html
+++ b/web/nav.html
@@ -4,6 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+
 <html>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -63,7 +64,9 @@ and open the template in the editor.
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-user login"></span> Login</a></li>                        
-                    <li><a href="#" data-toggle="modal" data-target="#signup-modal">Sign up</a></li>
+                    <li>
+                        <a href="#"  onclick = "location.href='registrationPage.htm'" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-user login"></span> Sign up</a>
+                        </li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
@@ -108,107 +111,6 @@ and open the template in the editor.
         </div>
     </div>
 
-
-    <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog"
-         aria-labelledby="myModalLabel" aria-hidden="true"
-         style=" display: none">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Begin # DIV Form -->
-                <div id="div-forms">
-
-                    <!-- Begin | Register Form -->
-                    <form id="register-form" action=""
-                          method="post" >
-                        <div class="modal-body">
-                            <div style="font-size:20px;">
-                                <Span><Strong>Sign up as:</Strong></Span>
-                                <select style="margin-right: 40%" id="selectSign" onchange="selectSignIn();">
-                                    <option value="Member">Member</option>
-                                    <option value="Faculty">Faculty</option>
-                                    <option value="Publisher">Publisher</option>
-
-
-                                </select>
-                                </div>
-                            </br>
-                                <div class="member">
-                                  
-                                    <input id="register_username" class="form-control" type="text"
-                                           placeholder="Username" name= "reg_username" required> 
-                                    <input
-                                        id="register_password" class="form-control" type="password"
-                                        placeholder="Password" name= "reg_password" required> 
-                                    <input name="reg_password_confirm"
-                                           id="register_confirm_password" class="form-control"
-                                           type="password" placeholder="Confirm Password" required>
-                                    <input id="register_email"  name="reg_email" class="form-control" type="text"
-                                           placeholder="E-Mail" required>
-                                    <input id="first_name" name="reg_firstname"
-                                           class="form-control" type="text" placeholder="First Name"
-                                           required> 
-
-                                    <!--<input type="text" class="form-control" id="reg_ssn" name="reg_ssn" placeholder="SSN"
-                                           required>-->
-
-                                    <input id="last_name" class="form-control" name="reg_lastname"
-                                           type="text" placeholder="Last Name" required>
-                                    <input id="ssn" class="form-control" name="ssn" 
-                                           type="text" placeholder="SSN" required style="display:none">
-                                    <input name="reg_address"
-                                           id="address" class="form-control" type="text"
-                                           placeholder="Address" required>
-                                    <input id="city" name="reg_city"
-                                           class="form-control" type="text" placeholder="City" required>
-                                    <input id="state" class="form-control" type="text" name="reg_state"
-                                           placeholder="State" required> 
-                                    <input id="zipcode" name="reg_zipcode"
-                                           class="form-control" type="text" placeholder="Zipcode" required>
-                                    <input id="telephone" class="form-control" type="text" name="reg_telephone"
-                                           placeholder="Telephone" required>
-                                    <!-- <input
-                                             id="credit_card_number" class="form-control" type="text"
-                                             placeholder="Credit Card Number" name="reg_cardnum" required>-->
-                                </div>  
-                                <div class="publisher" style="display:none">
-                                    <input id="register_username" class="form-control" type="text"
-                                           placeholder="Username" name= "pub_username" required> 
-                                    <input
-                                        id="pub_password" class="form-control" type="password"
-                                        placeholder="Password" name= "pub_password" required> 
-                                    <input name="pub_password_confirm"
-                                           id="register_confirm_password" class="form-control"
-                                           type="password" placeholder="Confirm Password" required>
-                                    <input id="company_name"  name="company_name" class="form-control" type="text"
-                                           placeholder="Company name" required>
-                                    <input id="pub_address" name="pub_address"
-                                           class="form-control" type="text" placeholder="Address"
-                                           required> 
-                                    <input
-                                        id="pub_email" class="form-control" type="text"
-                                        placeholder="Email" name= "pub_email" required> 
-                                    <input name="pub_phone"
-                                           id="pub_phone" class="form-control"
-                                           type="text" placeholder="Phone" required>
-
-                                </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <div>
-                                        <button type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
-                                    </div>
-
-                                </div>
-                                </form>
-                                <!-- End | Register Form -->
-
-                            </div>
-                            <!-- End # DIV Form -->
-
-                        </div>
-                </div>
-            </div>
 
 
             <script>
