login half finished

--- a/web/nav.html
+++ b/web/nav.html
@@ -63,7 +63,7 @@ and open the template in the editor.
                     <li><a href="#">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-user login"></span> Login</a></li>                        
+                    <li><a href="#" onclick = "location.href='loginPage.htm'"><span class="glyphicon glyphicon-user login"></span> Login</a></li>                        
                     <li>
                         <a href="#"  onclick = "location.href='registrationPage.htm'" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-user login"></span> Sign up</a>
                         </li>
