--- a/web/searchbar.html
+++ b/web/searchbar.html
@@ -11,7 +11,7 @@ and open the template in the editor.
                 <div class="form-group" style="width: 50%">
                     <input type="text" name = "keywords" class="form-control" placeholder="Search" style="width:100%">
                 </div>
-                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> 
+                <button type="submit" value="Submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> 
             </form>
             <a href="advanced_search.html">Advanced Search </a>
         </div>
