--- a/web/searchbar.html
+++ b/web/searchbar.html
@@ -9,9 +9,9 @@ and open the template in the editor.
         <div class="col-lg-12">
             <form class="navbar-form page-header" role="search" action="display_page.html">
                 <div class="form-group" style="width: 50%">
-                    <input type="text" class="form-control" placeholder="Search" style="width:100%">
+                    <input type="text" name = "keywords" class="form-control" placeholder="Search" style="width:100%">
                 </div>
-                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> 
+                <button type="submit" value="Submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> 
             </form>
             <a href="advanced_search.html">Advanced Search </a>
         </div>
