--- a/web/WEB-INF/jsp/footer.html
+++ b/web/WEB-INF/jsp/footer.html
@@ -5,7 +5,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <div class="footer" style="margin-top:20px">
+    <div class="footer" style="margin-top:20px;position:relative;bottom:0;width:100%">
     <footer class="text-center" >
         <p>Copyright © Silly Bee. All right reserved.</p>
     </footer>
