--- a/web/header.html
+++ b/web/header.html
@@ -9,10 +9,11 @@ and open the template in the editor.
         <title>silly bee library</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
         <!-- Bootstrap -->
         <link href="bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap-3.3.6-dist/css/customized_css.css" rel="stylesheet">
+        <link href="bootstrap-3.3.6-dist/css/jquery-ui-timepicker-addon.css" rel="stylesheet">
         <style>
             /* Add a gray background color and some padding to the footer */
             footer {
