--- a/web/WEB-INF/jsp/header.html
+++ b/web/WEB-INF/jsp/header.html
@@ -13,6 +13,11 @@ and open the template in the editor.
         <!-- Bootstrap -->
         <link href="bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap-3.3.6-dist/css/customized_css.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/style.min.css">
+        <link rel="stylesheet" href="css/rating.min.css">
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/favicon.png">
         <style>
             /* Add a gray background color and some padding to the footer */
             footer {
