admin panel 70% finished

--- a/web/admin_login.html
+++ b/web/admin_login.html
@@ -17,6 +17,7 @@
                         <a href="#" class="list-group-item" id="best_seller_list">Best Seller List</a>
                         <a href="#" class="list-group-item" id="manage_users">Manage Users</a>
                         <a href="#" class="list-group-item" id="manage_books">Manage Books</a>
+                        <a href="#" class="list-group-item" id="update_books">Update Books</a>
                     </div>
                 </div>
 
