--- a/web/admin_panel/manage_books.html
+++ b/web/admin_panel/manage_books.html
@@ -16,10 +16,11 @@ and open the template in the editor.
         </div>  
     </div>
     <ul class="list-group">
-        <li class="list-group-item">Book 1<button type="button" class="btn btn-danger pull-right">Delete</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
-        <li class="list-group-item">Book 2<button type="button" class="btn btn-danger pull-right">Delete</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
-        <li class="list-group-item">Book 3<button type="button" class="btn btn-danger pull-right">Delete</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
-        <li class="list-group-item">Book 4<button type="button" class="btn btn-danger pull-right">Delete</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
-        <li class="list-group-item">Book 5<button type="button" class="btn btn-danger pull-right">Delete</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        <li class="list-group-item">Book 1<button type="button" class="btn btn-warning pull-right">Unban</button><button type="button" class="btn btn-danger pull-right">Ban</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        <li class="list-group-item">Book 2<button type="button" class="btn btn-warning pull-right">Unban</button><button type="button" class="btn btn-danger pull-right">Ban</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        <li class="list-group-item">Book 3<button type="button" class="btn btn-warning pull-right">Unban</button><button type="button" class="btn btn-danger pull-right">Ban</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        <li class="list-group-item">Book 4<button type="button" class="btn btn-warning pull-right">Unban</button><button type="button" class="btn btn-danger pull-right">Ban</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        <li class="list-group-item">Book 6<button type="button" class="btn btn-danger pull-right">Ban</button><button type="button" class="btn btn-primary pull-right">Update Lisence</button></li>
+        
     </ul>
 </html>
